--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,4 +26,4 @@ jobs:
       - uses: actions/setup-python@v2
       - name: Check Dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r requirements-freeze.txt
