--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,6 @@ jobs:
       - name: Lint
         run: |
           set -ex
-          flake8 --ignore=E266,E501 src
           black -l200 src
+          flake8 --max-line-len=200 src
           git diff --exit-code
